--- a/.github/ISSUE_TEMPLATE/plugin.yml
+++ b/.github/ISSUE_TEMPLATE/plugin.yml
@@ -16,7 +16,7 @@ body:
   - type: checkboxes
     attributes:
       label: |-
-          I want to suggest an idea and checked that ...
+          I want to suggest an idea and checked that ... <br />
           这是中文描述
       description: Make sure that your request fulfills all of the following requirements. If one requirement cannot be satisfied, explain in detail why.
       options:
