refactor(common): refactor error

--- a/core/datacap-ui/package.json
+++ b/core/datacap-ui/package.json
@@ -35,15 +35,12 @@
     "embla-carousel-vue": "^8.0.2",
     "export-to-csv": "^1.2.4",
     "lodash": "^4.17.21",
-    "lucide-vue-next": "^0.356.0",
     "md-editor-v3": "^4.12.1",
     "nprogress": "^0.2.0",
     "radix-vue": "^1.5.2",
-    "tailwind-merge": "^2.2.1",
-    "tailwindcss-animate": "^1.0.7",
     "uuid": "^9.0.1",
     "vaul-vue": "^0.1.0",
-    "vee-validate": "^4.12.6",
+    "view-shadcn-ui": "2024.1.3-alpha.1730459663",
     "view-ui-plus": "^1.3.16",
     "vue": "^3.4.21",
     "vue-clipboard3": "^2.0.0",
@@ -54,8 +51,7 @@
     "vue3-calendar-heatmap": "^2.0.5",
     "vue3-grid-layout-next": "^1.0.6",
     "vuedraggable": "^4.1.0",
-    "vuex": "^4.1.0",
-    "zod": "^3.22.4"
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@types/lodash": "^4.17.0",
@@ -63,9 +59,6 @@
     "@types/nprogress": "^0.2.3",
     "@types/uuid": "^9.0.8",
     "@vitejs/plugin-vue": "^5.0.4",
-    "autoprefixer": "^10.4.18",
-    "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1",
     "tippy.js": "^6.3.7",
     "typescript": "^5.2.2",
     "vite": "^5.4.8",
