--- a/core/datacap-ui/tsconfig.json
+++ b/core/datacap-ui/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "ES2020",
     "useDefineForClassFields": true,
-    "module": "Node16",
+    "module": "ESNext",
     "lib": [
       "ES2020",
       "DOM",
@@ -10,14 +10,14 @@
     ],
     "skipLibCheck": true,
     /* Bundler mode */
-    "moduleResolution": "node16",
+    "moduleResolution": "node",
     "allowImportingTsExtensions": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "preserve",
     /* Linting */
-    "strict": true,
+    "strict": false,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
