--- a/core/datacap-ui/package.json
+++ b/core/datacap-ui/package.json
@@ -46,7 +46,7 @@
     "@types/nprogress": "^0.2.3",
     "@vitejs/plugin-vue": "^5.0.4",
     "tippy.js": "^6.3.7",
-    "typescript": "5.2.2",
+    "typescript": "^5.2.2",
     "vite": "^5.4.8",
     "vue-tsc": "^1.8.27"
   }
