feat(plugin): adapter core

--- a/convert/datacap-convert-spi/pom.xml
+++ b/convert/datacap-convert-spi/pom.xml
@@ -30,6 +30,11 @@
             <groupId>io.edurt.datacap</groupId>
             <artifactId>datacap-common</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.edurt.datacap</groupId>
+            <artifactId>datacap-plugin</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
