--- a/pom.xml
+++ b/pom.xml
@@ -91,12 +91,12 @@
         <module>parser/datacap-parser-spi</module>
 <!--        <module>parser/datacap-parser-trino</module>-->
 <!--        <module>parser/datacap-parser-mysql</module>-->
-<!--        <module>scheduler/datacap-scheduler-spi</module>-->
+        <module>scheduler/datacap-scheduler-spi</module>
 <!--        <module>scheduler/datacap-scheduler-local</module>-->
         <module>notify/datacap-notify-spi</module>
 <!--        <module>notify/datacap-notify-dingtalk</module>-->
         <module>convert/datacap-convert-spi</module>
-<!--        <module>convert/datacap-convert-txt</module>-->
+        <module>convert/datacap-convert-txt</module>
 <!--        <module>convert/datacap-convert-json</module>-->
 <!--        <module>convert/datacap-convert-none</module>-->
 <!--        <module>convert/datacap-convert-csv</module>-->
