feat(plugin): adapter convert ---> json

--- a/configure/etc/conf/plugins.properties
+++ b/configure/etc/conf/plugins.properties
@@ -1,2 +1,3 @@
 datacap-plugin-mysql=plugin/datacap-plugin-mysql/pom.xml
 datacap-convert-txt=convert/datacap-convert-txt/pom.xml
+datacap-convert-json=convert/datacap-convert-json/pom.xml
