--- a/pom.xml
+++ b/pom.xml
@@ -97,7 +97,7 @@
 <!--        <module>notify/datacap-notify-dingtalk</module>-->
         <module>convert/datacap-convert-spi</module>
         <module>convert/datacap-convert-txt</module>
-<!--        <module>convert/datacap-convert-json</module>-->
+        <module>convert/datacap-convert-json</module>
 <!--        <module>convert/datacap-convert-none</module>-->
 <!--        <module>convert/datacap-convert-csv</module>-->
 <!--        <module>convert/datacap-convert-xml</module>-->
