--- a/pom.xml
+++ b/pom.xml
@@ -100,7 +100,7 @@
         <module>convert/datacap-convert-json</module>
 <!--        <module>convert/datacap-convert-none</module>-->
 <!--        <module>convert/datacap-convert-csv</module>-->
-<!--        <module>convert/datacap-convert-xml</module>-->
+        <module>convert/datacap-convert-xml</module>
         <module>test/datacap-test-plugin</module>
     </modules>
 
