--- a/configure/etc/conf/plugins.properties
+++ b/configure/etc/conf/plugins.properties
@@ -2,3 +2,4 @@ datacap-plugin-mysql=plugin/datacap-plugin-mysql/pom.xml
 datacap-convert-txt=convert/datacap-convert-txt/pom.xml
 datacap-convert-json=convert/datacap-convert-json/pom.xml
 datacap-convert-xml=convert/datacap-convert-xml/pom.xml
+datacap-convert-csv=convert/datacap-convert-csv/pom.xml
