--- a/configure/etc/conf/plugins.properties
+++ b/configure/etc/conf/plugins.properties
@@ -3,3 +3,4 @@ datacap-convert-txt=convert/datacap-convert-txt/pom.xml
 datacap-convert-json=convert/datacap-convert-json/pom.xml
 datacap-convert-xml=convert/datacap-convert-xml/pom.xml
 datacap-convert-csv=convert/datacap-convert-csv/pom.xml
+datacap-convert-none=convert/datacap-convert-none/pom.xml
