--- a/convert/datacap-convert-none/pom.xml
+++ b/convert/datacap-convert-none/pom.xml
@@ -11,16 +11,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>datacap-convert-none</artifactId>
-    <description>DataCap - Convert for Multidimensional Arrays</description>
+    <description>DataCap - Convert - Multidimensional Arrays</description>
 
     <dependencies>
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-reflect</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.google.inject</groupId>
-            <artifactId>guice</artifactId>
         </dependency>
         <dependency>
             <groupId>ch.qos.logback</groupId>
