feat(plugin): support plugin context manager

--- a/configure/assembly/plugin.xml
+++ b/configure/assembly/plugin.xml
@@ -13,7 +13,7 @@
             <useProjectArtifact>false</useProjectArtifact>
             <outputDirectory>./</outputDirectory>
             <unpack>false</unpack>
-            <useTransitiveDependencies>false</useTransitiveDependencies>
+            <useTransitiveDependencies>true</useTransitiveDependencies>
             <excludes>
                 <!-- Spring related -->
                 <exclude>org.springframework.boot:*</exclude>
