--- a/configure/etc/conf/plugins.properties
+++ b/configure/etc/conf/plugins.properties
@@ -1,4 +1,5 @@
 datacap-plugin-mysql=plugin/datacap-plugin-mysql/pom.xml
+datacap-plugin-clickhouse=plugin/datacap-plugin-clickhouse/pom.xml
 datacap-convert-txt=convert/datacap-convert-txt/pom.xml
 datacap-convert-json=convert/datacap-convert-json/pom.xml
 datacap-convert-xml=convert/datacap-convert-xml/pom.xml
