feat(plugin): add convert and convert xml test

--- a/configure/etc/conf/plugin.conf
+++ b/configure/etc/conf/plugin.conf
@@ -1,5 +1,6 @@
 -- Plugin list --
 datacap-plugin-mysql
+datacap-plugin-clickhouse
 
 -- Scheduler list --
 
@@ -15,3 +16,5 @@ datacap-plugin-mysql
 datacap-convert-txt
 datacap-convert-json
 datacap-convert-xml
+datacap-convert-none
+datacap-convert-csv
