--- a/core/datacap-spi/pom.xml
+++ b/core/datacap-spi/pom.xml
@@ -82,34 +82,9 @@
             <version>${datacap.influxdb.version}</version>
             <scope>provided</scope>
         </dependency>
-        <!-- Support convert -->
         <dependency>
             <groupId>io.edurt.datacap</groupId>
-            <artifactId>datacap-convert-txt</artifactId>
-            <version>${project.version}</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>io.edurt.datacap</groupId>
-            <artifactId>datacap-convert-json</artifactId>
-            <version>${project.version}</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>io.edurt.datacap</groupId>
-            <artifactId>datacap-convert-none</artifactId>
-            <version>${project.version}</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>io.edurt.datacap</groupId>
-            <artifactId>datacap-convert-csv</artifactId>
-            <version>${project.version}</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>io.edurt.datacap</groupId>
-            <artifactId>datacap-convert-xml</artifactId>
+            <artifactId>datacap-convert-spi</artifactId>
             <version>${project.version}</version>
             <scope>provided</scope>
         </dependency>
