--- a/plugin/datacap-plugin-clickhouse/pom.xml
+++ b/plugin/datacap-plugin-clickhouse/pom.xml
@@ -15,6 +15,8 @@
 
     <properties>
         <clickhouse-jdbc.version>0.6.5</clickhouse-jdbc.version>
+        <httpclient5.version>5.3.1</httpclient5.version>
+        <lz4.version>1.8.0</lz4.version>
     </properties>
 
     <dependencies>
@@ -37,13 +39,13 @@
         <dependency>
             <groupId>org.apache.httpcomponents.client5</groupId>
             <artifactId>httpclient5</artifactId>
-            <version>5.3.1</version>
+            <version>${httpclient5.version}</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.lz4</groupId>
             <artifactId>lz4-java</artifactId>
-            <version>1.8.0</version>
+            <version>${lz4.version}</version>
         </dependency>
     </dependencies>
 
