--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,7 @@
         <module>convert/datacap-convert-xml</module>
         <module>test/datacap-test-plugin</module>
         <module>test/datacap-test-convert</module>
+        <module>test/datacap-test-core</module>
     </modules>
 
     <name>datacap</name>
