--- a/core/datacap-server/pom.xml
+++ b/core/datacap-server/pom.xml
@@ -11,7 +11,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>datacap-server</artifactId>
-    <description>DataCap - server</description>
+    <description>DataCap - Core - Server</description>
 
     <properties>
         <h2.version>2.1.214</h2.version>
