--- a/pom.xml
+++ b/pom.xml
@@ -203,7 +203,7 @@
         <datacap.minio.version>8.5.12</datacap.minio.version>
         <datacap.maven.model.version>3.9.6</datacap.maven.model.version>
         <!-- maven plugin -->
-        <plugin.maven.checkstyle.version>3.0.0</plugin.maven.checkstyle.version>
+        <plugin.maven.checkstyle.version>3.3.1</plugin.maven.checkstyle.version>
         <plugin.maven.findbugs.version>4.8.5.0</plugin.maven.findbugs.version>
         <plugin.maven.compiler.version>3.13.0</plugin.maven.compiler.version>
         <plugin.maven.cobertura.version>2.7</plugin.maven.cobertura.version>
@@ -453,15 +453,21 @@
                 <version>${plugin.maven.checkstyle.version}</version>
                 <configuration>
                     <configLocation>configure/checks.xml</configLocation>
+                    <consoleOutput>true</consoleOutput>
+                    <failOnViolation>true</failOnViolation>
+                    <violationSeverity>warning</violationSeverity>
+                    <logViolationsToConsole>true</logViolationsToConsole>
+                    <maxAllowedViolations>0</maxAllowedViolations>
+                    <propertyExpansion>org.checkstyle.ant.logging.level=DEBUG</propertyExpansion>
                 </configuration>
                 <executions>
                     <execution>
                         <id>validate</id>
                         <phase>validate</phase>
                         <configuration>
-                            <encoding>UTF-8</encoding>
                             <consoleOutput>true</consoleOutput>
                             <failsOnError>true</failsOnError>
+                            <logViolationsToConsole>true</logViolationsToConsole>
                         </configuration>
                         <goals>
                             <goal>check</goal>
