feat(plugin): support set parent class package

--- a/configure/etc/conf/plugins.properties
+++ b/configure/etc/conf/plugins.properties
@@ -6,3 +6,4 @@ datacap-convert-xml=convert/datacap-convert-xml/pom.xml
 datacap-convert-csv=convert/datacap-convert-csv/pom.xml
 datacap-convert-none=convert/datacap-convert-none/pom.xml
 datacap-executor-local=executor/datacap-executor-local/pom.xml
+datacap-executor-seatunnel=executor/datacap-executor-seatunnel/pom.xml
