--- a/pom.xml
+++ b/pom.xml
@@ -190,6 +190,9 @@
         <kotlin.version>2.0.20</kotlin.version>
         <commons-beanutils.version>1.9.4</commons-beanutils.version>
         <redis.version>3.8.0</redis.version>
+        <snakeyaml.version>1.33</snakeyaml.version>
+        <useragent.version>1.21</useragent.version>
+        <openai.version>2024.01.3</openai.version>
         <testcontainers.version>1.20.1</testcontainers.version>
         <assembly-plugin.version>3.6.0</assembly-plugin.version>
         <dep.reflections.version>0.10.2</dep.reflections.version>
