--- a/scheduler/datacap-scheduler-spi/pom.xml
+++ b/scheduler/datacap-scheduler-spi/pom.xml
@@ -9,17 +9,13 @@
     </parent>
 
     <artifactId>datacap-scheduler-spi</artifactId>
-    <description>DataCap - Schedule spi</description>
+    <description>DataCap - Scheduler - Spi</description>
 
     <properties>
         <quartz.version>2.3.2</quartz.version>
     </properties>
 
     <dependencies>
-        <dependency>
-            <groupId>com.google.inject</groupId>
-            <artifactId>guice</artifactId>
-        </dependency>
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
