--- a/configure/etc/conf/plugins.properties
+++ b/configure/etc/conf/plugins.properties
@@ -7,3 +7,4 @@ datacap-convert-csv=convert/datacap-convert-csv/pom.xml
 datacap-convert-none=convert/datacap-convert-none/pom.xml
 datacap-executor-local=executor/datacap-executor-local/pom.xml
 datacap-executor-seatunnel=executor/datacap-executor-seatunnel/pom.xml
+datacap-scheduler-local=scheduler/datacap-scheduler-local/pom.xml
